<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título principal -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center_horizontal"
        android:text="@string/panel_admin_usuarios"
        android:textSize="20sp"
        android:textStyle="bold"
        style="@style/CustomTextViewStyle" /> <!-- Aplicando el estilo -->

    <!-- Texto para el ID -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_id"
        style="@style/CustomTextViewStyle" />

    <!-- LinearLayout para el campo de ID y el botón de búsqueda -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boton_buscar" />
    </LinearLayout>

    <!-- Texto para Nombre de Usuario -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_nombre_usuario"
        style="@style/CustomTextViewStyle" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <!-- Texto para Email de Usuario -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email_usuario"
        style="@style/CustomTextViewStyle" />

    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <!-- Botón de Modificar -->
    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_modificar" />

    <!-- Botón de Eliminar -->
    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_eliminar" />

    <!-- Botón de Ver Listado -->
    <Button
        android:id="@+id/buttonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_ver_listado" />

</LinearLayout>
