<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre_usuario"
        android:inputType="textPersonName"
        style="@style/CustomEditTextStyle" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contrasena"
        android:inputType="textPassword"
        style="@style/CustomEditTextStyle" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_iniciar_sesion"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
